--- a/q/273996.html
+++ b/q/273996.html
@@ -26,42 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>05AB1E</td><td>240708T081925Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274007#274007">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>154</td><td>[Dis]</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="0"><td>154</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="1"><td>022</td><td>05AB1E</td><td>240708T081925Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274007#274007">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>022</td><td>Charcoal</td><td>240708T073213Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274004#274004">Neil</a></td></tr>
 <tr d-ix="3"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
 <tr d-ix="4"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
 <tr d-ix="5"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 22 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>.•Qfāþ•uA.•’»'WT•м1ýÃg
-</code></pre>
-<p><a href="https://tio.run/##yy9OTMpM/f9f71HDosC0I42H9wEZpY4g7qOGmYd2q4eHAJkX9hge3nu4Of3/f0MA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X90X1ZZpb2SwqO2SQpK9v/1HjUsCkw70nh4H5BR6gjiPmqYeWi3engIkHlhj@HhvZXFh5vT/@v8BwA" rel="nofollow noreferrer">verify all alphanumeric characters</a>.</p>
-<p><code>.•Qfāþ•u</code> could alternatively be <code>‘ÕÉLF‘ê¨</code> for the same byte-count:<br />
-<a href="https://tio.run/##yy9OTMpM/f//UcOMw1MPd/q4gRirDq1w1HvUsOhRw8xDu9XDQ4DMC3sMD@893Jz@/78hAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X90X1ZZpb2SwqO2SQpK9v8fNcw4PPVwp48biLHq0ApHvUcNix41zDy0Wz08BMi8sMfw8N7K4sPN6f91/gMA" rel="nofollow noreferrer">verify all alphanumeric characters</a>.</p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>.•Qfāþ•     #  Push compressed string &quot;acfhlrs&quot;
-       u    #  Uppercase it: &quot;ACFHLRS&quot;
-            # OR:
-‘ÕÉLF‘      #  Push dictionary string &quot;SCRATCHLF&quot;
-      ê     #  Uniquify and sort it to &quot;ACFHLRST&quot;
-       ¨    #  Remove the trailing character: &quot;ACFHLRS&quot;
-A           # Push the lowercase alphabet: &quot;abcdefghijklmnopqrstuvwxyz&quot;
- .•’»'WT•  '# Push compressed string &quot;behjuvwyz&quot;
-         м  # Remove those characters: &quot;acdfgiklmnopqrstx&quot;
-1ý          # Join the two values on the stack with &quot;1&quot;-delimiter:
-            #  &quot;ACFHLRS1acdfgiklmnopqrstx&quot;
-  Ã         # Only keep those characters from the (implicit) input-character
-   g        # Pop and push its length
-            # (after which it's output implicitly as result)
-</code></pre>
-<p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to use the dictionary?</em> and <em>How to compress strings not part of the dictionary?</em>)</a> to understand why <code>.•Qfāþ•</code> is <code>&quot;acfhlrs&quot;</code>; <code>‘ÕÉLF‘</code> is <code>&quot;SCRATCHLF&quot;</code>; and <code>.•’»'WT•</code> is <code>&quot;behjuvwyz&quot;</code>.</p>
-</div>
-<div id="pu1" class="pu"><h1>[Dis], 154 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.esolangs.blog/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 154 bytes</h1>
 <pre><code>}*^_!!!_!_!!{{__!!{!!!!{!!!{_______________&gt;&gt;*_________________|*_^______!!!___!!{___________________________!!!{!{!!!!_{_!____{{!!{{!{{{{{{{{{{{___!!!!{!
 </code></pre>
 <p><a href="https://tpaefawzen.github.io/dis.web/#source=%7D*%5E_%21%21%21_%21_%21%21%7B%7B__%21%21%7B%21%21%21%21%7B%21%21%21%7B_______________%3E%3E*_________________%7C*_%5E______%21%21%21___%21%21%7B___________________________%21%21%21%7B%21%7B%21%21%21%21_%7B_%21____%7B%7B%21%21%7B%7B%21%7B%7B%7B%7B%7B%7B%7B%7B%7B%7B%7B___%21%21%21%21%7B%21&amp;input_enc=utf-8&amp;input=A&amp;output_enc=base16" rel="nofollow noreferrer">On my dis.web</a></p>
+<h2>How it works</h2>
+<p>This time I subtracted 62 from the input.</p>
+<p>Getchar to store to register A:</p>
+<pre><code>}
+</code></pre>
+<p>Goto 62 (as address 43 points):</p>
+<pre><code>*^
+</code></pre>
+<p>Obtw memory 43-45 as data:</p>
+<pre><code>&gt;&gt;*
+</code></pre>
+<p>Address 63-66 as code:</p>
+<pre><code>|     (Store op(A,62) to address 44)
+ *_^  (goto what address 44 says)
+</code></pre>
+<p>Address 4-153 is lookup table:</p>
+<pre><code>!!!_!_!!{{__!!{!!!!{!!!{_______________&gt;&gt;*_________________|*_^______!!!___!!{___________________________!!!{!{!!!!_{_!____{{!!{{!{{{{{{{{{{{___!!!!{!
+</code></pre>
 <h2>How generated</h2>
 <h3><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 1113 bytes</h3>
 
@@ -109,7 +102,7 @@ console.log(program.length, i);
 </code></pre>
 <p><a href="https://tio.run/##fVJrc5swEPyuX3HNTDLIxsQY7DTj4Bnn1bRN2jTp2@N6CMYglyAXRApN@O3uIXBw3IdmBNJqb/d0url9Z8dOxBaiFfKpu1xOWXxhCx8suCeAw3MFxMmNiGxHKLTEinE4vD6xjP7jfpaEjmA8hAlfTG6yyZR5TCipChmFOqoYkSuSKAQFUmhBBk0pBRS25aJWzAl5ElA7POazKc9mUvYAdNjZQe1iQVfx7Vq6Qp6mul3Yo6D80yqvRm1WlEWbBZxHSrorOSqsYVmJ0ZVLTspv3icsXCQCK7rV1juG2e3tPd8fHh4dn5y@OHv56vX5xZu3l@@urt9/@Pjp85ev9o0zdWeez@bfg9uQL35EsUjufqbZr60@EVEi/KyQ0odHp2fnV9e2M515rKamyCK7uzAyDNXsqL2Oum@q@10VnXGaOLtjbcajE9vxlbk1uCejXmcDwcx9Nwg4WPIOI5m/CqX5WLu1F0osImuwqudI0zQExtVeEhzfRkbx1RxsrEvOQjEUSptSAqSmpdag6jht7VXntKlTLeaRUHCXUWuQDrKHB2RbGW3phQbgHR0exjxwtYB7ylyVKY/aY0pIjpOFTNY8b3zDkiwi7kX2LQIF3id4X2wVVu21wA094fcROLBA7xq4ajZh1VqyrUyjOGNFY0mWaeL5SraJRoOt8undIHbLEJS3kNjdIDb@QewZheMT6kNjgtnLPHt7LT3fiCuvrI81FjpBMnVjhdENs/s/zFZ1@k/Qs/Wg9YMJHuRkve7VKbb9X9Cqriow2l8ufwM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <hr />
-<h1><a href="https://www.esolangs.org/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
+<h1><a href="https://www.esolangs.blog/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 163 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>}*__|*__^__________!!!___!{!___!!!!__!{!__{!{!*!!{!!!{!___________________________{{{{{{{{{___!!!{!!____________________________________!!!!{{!!!_{!!_____{!{{{!{{!
 </code></pre>
 <p>Assumes ASCII input. Reaches to <code>{</code> to output a byte if truthy, no output if falsey.</p>
@@ -166,6 +159,31 @@ console.log(program.length);
 <p>I first tried what operation to do could reduce code space.</p>
 <p>For each possible inputs and truthy cases (let them x), I tried x subtracted by command character on Dis (which is one of 33, 42, 62, 94, 95, 123, 124, 125).</p>
 <p>At first I tried if the program who begins with <code>}*|*^</code> works;</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 22 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>.•Qfāþ•uA.•’»'WT•м1ýÃg
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f9f71HDosC0I42H9wEZpY4g7qOGmYd2q4eHAJkX9hge3nu4Of3/f0MA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X90X1ZZpb2SwqO2SQpK9v/1HjUsCkw70nh4H5BR6gjiPmqYeWi3engIkHlhj@HhvZXFh5vT/@v8BwA" rel="nofollow noreferrer">verify all alphanumeric characters</a>.</p>
+<p><code>.•Qfāþ•u</code> could alternatively be <code>‘ÕÉLF‘ê¨</code> for the same byte-count:<br />
+<a href="https://tio.run/##yy9OTMpM/f//UcOMw1MPd/q4gRirDq1w1HvUsOhRw8xDu9XDQ4DMC3sMD@893Jz@/78hAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X90X1ZZpb2SwqO2SQpK9v8fNcw4PPVwp48biLHq0ApHvUcNix41zDy0Wz08BMi8sMfw8N7K4sPN6f91/gMA" rel="nofollow noreferrer">verify all alphanumeric characters</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>.•Qfāþ•     #  Push compressed string &quot;acfhlrs&quot;
+       u    #  Uppercase it: &quot;ACFHLRS&quot;
+            # OR:
+‘ÕÉLF‘      #  Push uppercased dictionary string &quot;SCRATCHLF&quot;
+      ê     #  Uniquify and sort it to &quot;ACFHLRST&quot;
+       ¨    #  Remove the trailing character: &quot;ACFHLRS&quot;
+A           # Push the lowercase alphabet: &quot;abcdefghijklmnopqrstuvwxyz&quot;
+ .•’»'WT•  '# Push compressed string &quot;behjuvwyz&quot;
+         м  # Remove those characters: &quot;acdfgiklmnopqrstx&quot;
+1ý          # Join the two values on the stack with &quot;1&quot;-delimiter:
+            #  &quot;ACFHLRS1acdfgiklmnopqrstx&quot;
+  Ã         # Only keep those characters from the (implicit) input-character
+   g        # Pop and push its length
+            # (after which it's output implicitly as result)
+</code></pre>
+<p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to use the dictionary?</em> and <em>How to compress strings not part of the dictionary?</em>)</a> to understand why <code>.•Qfāþ•</code> is <code>&quot;acfhlrs&quot;</code>; <code>‘ÕÉLF‘</code> is <code>&quot;SCRATCHLF&quot;</code>; and <code>.•’»'WT•</code> is <code>&quot;behjuvwyz&quot;</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
 <pre><code>⁼№1ACFHLRSbehjxθ№…β²⁰θ
