--- a/q/273996.html
+++ b/q/273996.html
@@ -26,14 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>154</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
-<tr d-ix="1"><td>022</td><td>05AB1E</td><td>240708T081925Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274007#274007">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>022</td><td>Charcoal</td><td>240708T073213Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274004#274004">Neil</a></td></tr>
-<tr d-ix="3"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
-<tr d-ix="4"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
-<tr d-ix="5"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
+<tr d-ix="0"><td>030</td><td>Ruby</td><td>240708T100801Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274009#274009">G B</a></td></tr>
+<tr d-ix="1"><td>154</td><td>Dis</td><td>240708T063433Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274001#274001">鳴神裁四点一号</a></td></tr>
+<tr d-ix="2"><td>022</td><td>05AB1E</td><td>240708T081925Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274007#274007">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>022</td><td>Charcoal</td><td>240708T073213Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274004#274004">Neil</a></td></tr>
+<tr d-ix="4"><td>041</td><td>Funge98</td><td>240708T064509Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274002#274002">Alt Shif</a></td></tr>
+<tr d-ix="5"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
+<tr d-ix="6"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.esolangs.blog/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 154 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 30 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;c{c=~/[1ACFHLRSacdfgik-tx]/}
+</code></pre>
+<p><a href="https://tio.run/##KypNqvyfZvtf1y65Otm2Tj/a0NHZzcMnKDgxOSUtPTNbt6QiVr/2f4GChr2hnp59laZecWpOanKJhlqa5n8A" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Using the same regex as other answers.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.esolangs.blog/wiki/Dis" rel="nofollow noreferrer">Dis</a>, 154 bytes</h1>
 <pre><code>}*^_!!!_!_!!{{__!!{!!!!{!!!{_______________&gt;&gt;*_________________|*_^______!!!___!!{___________________________!!!{!{!!!!_{_!____{{!!{{!{{{{{{{{{{{___!!!!{!
 </code></pre>
 <p><a href="https://tpaefawzen.github.io/dis.web/#source=%7D*%5E_%21%21%21_%21_%21%21%7B%7B__%21%21%7B%21%21%21%21%7B%21%21%21%7B_______________%3E%3E*_________________%7C*_%5E______%21%21%21___%21%21%7B___________________________%21%21%21%7B%21%7B%21%21%21%21_%7B_%21____%7B%7B%21%21%7B%7B%21%7B%7B%7B%7B%7B%7B%7B%7B%7B%7B%7B___%21%21%21%21%7B%21&amp;input_enc=utf-8&amp;input=A&amp;output_enc=base16" rel="nofollow noreferrer">On my dis.web</a></p>
@@ -160,7 +168,7 @@ console.log(program.length);
 <p>For each possible inputs and truthy cases (let them x), I tried x subtracted by command character on Dis (which is one of 33, 42, 62, 94, 95, 123, 124, 125).</p>
 <p>At first I tried if the program who begins with <code>}*|*^</code> works;</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 22 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 22 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.•Qfāþ•uA.•’»'WT•м1ýÃg
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f9f71HDosC0I42H9wEZpY4g7qOGmYd2q4eHAJkX9hge3nu4Of3/f0MA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/X90X1ZZpb2SwqO2SQpK9v/1HjUsCkw70nh4H5BR6gjiPmqYeWi3engIkHlhj@HhvZXFh5vT/@v8BwA" rel="nofollow noreferrer">verify all alphanumeric characters</a>.</p>
@@ -185,7 +193,7 @@ A           # Push the lowercase alphabet: &quot;abcdefghijklmnopqrstuvwxyz&quot
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to use the dictionary?</em> and <em>How to compress strings not part of the dictionary?</em>)</a> to understand why <code>.•Qfāþ•</code> is <code>&quot;acfhlrs&quot;</code>; <code>‘ÕÉLF‘</code> is <code>&quot;SCRATCHLF&quot;</code>; and <code>.•’»'WT•</code> is <code>&quot;behjuvwyz&quot;</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 22 bytes</h1>
 <pre><code>⁼№1ACFHLRSbehjxθ№…β²⁰θ
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMO1sDQxp1jDOb8UyFEydHR28/AJCk5KzciqUNJRKNTUUYBIOVcm56Q6Z@QXaCTpKBgZaILkNDWt///P@a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if the input is not a valid POSIX ls option, nothing if it is. Explanation:</p>
@@ -201,13 +209,13 @@ A           # Push the lowercase alphabet: &quot;abcdefghijklmnopqrstuvwxyz&quot
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 41 bytes</h1>
 <pre><code>&quot;NRTS&quot;4(I0&quot;1ACFHLRSacdfgiklmnopqrstx&quot;F!.@
 </code></pre>
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//9X8gsKCVYy0fA0UDJ0dHbz8AkKTkxOSUvPzM7JzcsvKCwqLqlQclPUc/j/v4ILAA" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Uses <code>0</code> as truthy and <code>1</code> as falsy.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a>, <s>26</s> 24 bytes</h1>
 <p><sup>-2 from @GammaFunction for swapping truthy/falsy</sup></p>
 <pre><code>/[1ACFHLRSacdfgik-tx]/Q1
 </code></pre>
@@ -217,7 +225,7 @@ A           # Push the lowercase alphabet: &quot;abcdefghijklmnopqrstuvwxyz&quot
 <pre><code>/^[1ACFHLRSacdfgik-tx]*$/Q1
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 34 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(o)grep(&quot;[1ACFHLRSacdfgik-tx]&quot;,o)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3lWI08jXTi1ILNJSiDR2d3Tx8goITk1PS0jOzdUsqYpV08jWhKqvTNJQMlDS5gJQhkEpOLNFQisnThYGYPKCgb2KBRppOao5GcUlRcUFOJlCJgaGRsYmpmbmFpaOTs4urm7uHp5e3j6-ff0BgUHBIaFh4RGRUYlJySmpaekZmVnZObl5-QWFRcUlpWXlFZZWSjpKSpibUCQsWQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
