--- a/q/273956.html
+++ b/q/273956.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Ruby</td><td>240708T110352Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/274011#274011">G B</a></td></tr>
-<tr d-ix="1"><td>053</td><td>Python 3</td><td>240708T082949Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/274008#274008">no comme</a></td></tr>
+<tr d-ix="0"><td>055</td><td>Python 3</td><td>240708T082949Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/274008#274008">no comme</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Ruby</td><td>240708T110352Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/274011#274011">G B</a></td></tr>
 <tr d-ix="2"><td>006</td><td>05AB1E</td><td>240708T065138Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/274003#274003">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>042</td><td>Desmos</td><td>240707T012010Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273974#273974">Aiden Ch</a></td></tr>
 <tr d-ix="4"><td>043</td><td>Charcoal</td><td>240707T205545Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273989#273989">Neil</a></td></tr>
@@ -46,17 +46,17 @@
 <tr d-ix="17"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
 <tr d-ix="18"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda x,k:x[k-1:]and[sorted(x[:k])[k//2]]+f(x[1:],k)
+</code></pre>
+<p><a href="https://tio.run/##ZY9NawMhEIbv/RWDJ6Vu0uwHLQsbyKUQ6CGQo3jYsrtU3KoYA5tfvx01aQ91QMb3fcaZcbfwZU21rlM399@fQw8L1@0idLFrZW8GcbE@jANdRKslE3q7LaV8nvCNPtdsnayHWZkRlAHrRkNfWPsEeJRxHMbFQZf8zcXNKlACxR4IS0TvPQeNPqIPmz/MrAeqf1kURFQUg9hUxY4o3yuZTFxu@I9D@Y9LoL0GBCeah8hNnI91grwfjh9xktPhfCZSJLSLf0h@HxrNYk/SfmytoIE3KKGGV8xKvGsOVVy0wagxmpz9AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;l,n{l.each_cons(n).map{|a|a.sort[n/2]}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y5HJ686Ry81MTkjPjk/r1gjT1MvN7GguiaxJlGvOL@oJDpP3yi2tvZ/gUJadLSxjoKpjoKFjoKRjoKJjoI5mGsEZpjE6hjH/gcA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 53 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda x,k:x[k-1:]and[sorted(x[:k])[k//2]]+f(x[1:],k)
-</code></pre>
-<p><a href="https://tio.run/##ZY9NawMhEIbv/RWDJ6Vu0u4HDQsJ5FII9FDI0XrYsLtU3KgYA5tfvx01aQ91QMb3feZDdwvf1lTLCFv4WqbufOo7mLluZ6GL11Z2phcX68PQ01m0WjKh1@tSyucR3@hzzZbRepiUGUAZsG4w9IW1T4BHGcdhmB32jv7q4iYVKIFiB4QlovOeg0Yf0YfNH2bWA9W/LAoiKopBHKriRJTvlUwmLg/8x6H8xyXQXgOCI81L5CHOxzpB3veHj7jJ5/54JFIkdBt7SH5fGs1iR9L/2FJBAxsooYY3zEq8aw5V/GiDUWM0OfsB" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒIù€Åm
