--- a/q/273996.html
+++ b/q/273996.html
@@ -47,7 +47,8 @@
             ;$      # &quot; abcdefghijklmnopqrstuvwxyz.,!?_\n+ ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-+:;\&quot;'~`@#$%^&amp;*()[]{}&lt;&gt;\\/=|&quot;
           &gt;&gt;        # without the initial space character
                ~^$@ # selecting only the 1-bits
-  +                 # flatten 
+  +                 # flatten to give
+                    # &quot;acdfgiklmnopqrstACFHLRS1&quot;
 ?                   # and get the index of the input, or zero if absent
 </code></pre>
 </div>
