--- a/q/273927.html
+++ b/q/273927.html
@@ -26,19 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Desmos</td><td>240706T001932Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273952#273952">Aiden Ch</a></td></tr>
-<tr d-ix="1"><td>051</td><td>JavaScript Node.js</td><td>240705T110815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273939#273939">l4m2</a></td></tr>
-<tr d-ix="2"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
-<tr d-ix="3"><td>2613</td><td>Nibbles</td><td>240705T145120Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273943#273943">Dominic </a></td></tr>
-<tr d-ix="4"><td>024</td><td>Charcoal</td><td>240705T091455Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273935#273935">Neil</a></td></tr>
-<tr d-ix="5"><td>045</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
-<tr d-ix="6"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
-<tr d-ix="8"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
-<tr d-ix="9"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
-<tr d-ix="10"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Elisp</td><td>240708T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/274014#274014">Samuel J</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Desmos</td><td>240706T001932Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273952#273952">Aiden Ch</a></td></tr>
+<tr d-ix="2"><td>051</td><td>JavaScript Node.js</td><td>240705T110815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273939#273939">l4m2</a></td></tr>
+<tr d-ix="3"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
+<tr d-ix="4"><td>2613</td><td>Nibbles</td><td>240705T145120Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273943#273943">Dominic </a></td></tr>
+<tr d-ix="5"><td>024</td><td>Charcoal</td><td>240705T091455Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273935#273935">Neil</a></td></tr>
+<tr d-ix="6"><td>045</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="7"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
+<tr d-ix="9"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
+<tr d-ix="10"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
+<tr d-ix="11"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1>Elisp, 93 Bytes, porting xnor's answer</h1>
+<pre><code>(defun f(n)(if(&gt; n 1)(apply'min(cl-loop for i in'(2 3 4 5)collect(+ 1 i(f(/(float n)i)))))0))
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 41 bytes</h1>
 <pre><code>I=[2...5]
 f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
 </code></pre>
@@ -46,7 +51,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
 <p><a href="https://www.desmos.com/calculator/trw3v6maj6" rel="nofollow noreferrer">Try It On Desmos!</a></p>
 <p><a href="https://www.desmos.com/calculator/sju9w065b5" rel="nofollow noreferrer">Try It On Desmos! - Prettified</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 51 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 51 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=6)=&gt;n&gt;1&amp;&amp;Math.min(i+f(n/--i),i&gt;2?f(n,i):1/0)
 </code></pre>
@@ -57,7 +62,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
 </code></pre>
 <p><a href="https://tio.run/##ZdLBTsMwDIDhO0/R05SKLo0dx00P7RvwBIhDNVYY2tKJTagnXr0waVkjJ9dPym85@Rp@hsvu@3C@bsP0vl@WsQtdH3rYbF6G66c@HYLSWr9iZSuq3Js@DWc1d/28/R1VqOeyLJfdFC7Tca@P04d6HhUUt1OWRV0X5inFUWGRoBVIKTqBLkUW6FP0AoETBDmRxVTlSEypypkAfaKyi45XRdl1gInKLhikVWUXDflVZZdMy@uOZddDi6tmXbaeHuqyXTXsHyq77JzlqCS7YME0GFV2kRGIomZvj4TeR83e938bruH7t8l@nGkbcHjXfM@3E2/G5Q8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/273930/58974">xnor's Python solution</a>.</p>
 <pre><code>&gt;1©5ò2ÈÒßU/XÃrm
 </code></pre>
@@ -74,7 +79,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
               m     :    Minimum
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 26 nibbles (13 bytes)</h1>
+<div id="pu4" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 26 nibbles (13 bytes)</h1>
 <pre><code> `; 1 -@$ 0 `/ . +~,4 + _ * @$ +$~ [
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LcsxDoIwAIXh_Z3iDZ0sYF8pUMLiPRwkJJqYGBdh5SIsXYxn4jaSwPrn_5bf-zkMr_snpe80PvK4GvYdxfxi6NifWdDOWaDljSdu0ZqZ1_09SFq94FEioEKNBhEt5CBBHiqhAFVQDTVQhFp4t9M_" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -96,7 +101,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
                               +$~           #     and i+1 (steps needed to multiply copies by i)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
 <pre><code>ＦＮ⊞υ∨¬ι⁺³⌊Ｅ⁴⁺κ§υ÷ι⁺²κＩ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##LYs5DsIwEAB7XrHlWjJNQDRUCBoXCf6CSYyyii/Z3ojfG0XylDOaeTV5jsa19o0ZUIXEdWL/sRmFAM1lRZbwzjjFiiQkaMcFLxJGCuTZ42gSXrveJDyqCov9HZMK9UU7LRap90HCJjr3k84UKj5NqahjQj5ka8OtnXf3Bw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Based on @xnor's approach but using dynamic programming instead of recursion.</p>
@@ -110,7 +115,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
 </code></pre>
 <p>Output the result for <code>n</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>49</s></sup> 45 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>49</s></sup> 45 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n-&gt;(n&gt;1)?[2..5|map=&gt;[+1+f//n&lt;=&amp;]|min]-&gt;0
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?cZRVrt" rel="nofollow noreferrer">Try it!</a></p>
@@ -122,7 +127,7 @@ f(n)=\{n&gt;1:\min(f(n/I)+I+1),0\}
 <p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
 <p>The formula in the OP.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&quot;D1›Di4L+DŠ/®δ.V+&gt;ß&quot;©.V
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/273930/52210"><em>@xnor</em>'s Python answer</a>, so make sure to upvote that answer as well.<br />
@@ -182,7 +187,7 @@ D                 # Duplicate the current value n
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to compress large integers?</em> and <em>How to compress integer lists?</em>)</a> to understand why <code>•¬òÃ,v₅aw°Üÿ∊•</code> is <code>50972899172091152076282460330 </code> and <code>•¬òÃ,v₅aw°Üÿ∊•82в</code> is <code>[1,0,2,3,3,4,5,6,6,7,9,8,27,12,81,16]</code>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
 <pre><code>f(1)=0.
 f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 </code></pre>
@@ -191,27 +196,27 @@ f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 <p>With the help of <code>table</code> in the header section, it computes all test cases almost instantly. Thanks to the <code>/&gt;</code> operator which does ceil-ed integer division, all intermediate arguments are integers without any complications, and we can simply pattern-match the 1 as the base case.</p>
 <p>Bitwise not operator <code>~</code> exists in Picat, but it doesn't like putting the two symbols <code>-~</code> side-by-side, so the usual <code>-~</code> trick does not save any bytes.</p>
 </div>
-<div id="pu8" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
+<div id="pu9" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the (fixed) formula given in the challenge.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>with(Math)f=n=&gt;min(...[81,27,9,6,5,3,2,1].map((v,i)=&gt;ceil(log(n/v)/log(4))*5-~(37115838&gt;&gt;i*4&amp;15)))
 </code></pre>
 <p><a href="https://tio.run/##ZdJBboMwEEDRfU/BqrIjB5ixxzYLuEFPUHWBaNI4IhA1iO56dVqqENzBK0vP8pfGPtdjfWs@w3XYd/37YZq@wnASL/VwkseyK6tL6ESapq8eFDpVKKtIaYUK3tJLfRViVEGWVXMIrWj7D9Flo8zmjZFyR/tvoR0Aee2rKuzMM5CUcmr67ta3h3Q@dxSQ/C0pkyxL8qf/iDFqhiZGYuhj9AzBRgg8qjFWXrUmVp4F9JHyLpJdFXmXACPlXcjRrMq7mBu/Ku@avLDrGHnXQ4GrbrpWe/NQ2szKWf9Q3rVE2i5qeBc05A4X5V20CMYsyruEBr1fdPO@v9MgZ@8/Y/Op8sIB4V23c57XcjNOPw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Google Sheets, 68 bytes</h1>
+<div id="pu10" class="pu"><h1>Google Sheets, 68 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SORTN(5*CEILING(LOG(A1/{1;2;6;3;9;27;81;5},4))+{1;3;7;4;8;12;16;6}) 
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 48 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and-~min(i+f(n/i)for i in b"&#2;&#3;&#4;&#5;")
 </code></pre>
-<p><a href="https://tio.run/##Fcu9CoAgFAZQ6Geop5AmLxURLhHUuyhmXagvkZaWXt1qPXD8fW0n1OBDjG7a9WGsFhgx9xq2fQ6G5NpJdEzuDIIFQ5gqSbO8ovgLfgka6yL7Rikay8IHxiXRfI0ovg" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##Fcu9CoAgFAZQ6Geop5AmLxURLhHUuyhmXagvkZaWXt1qPXD8fW0n1OBDjG7a9WGsFhgx9xq2fQ6G5NpJdEzuDIIFQ5gqSbO8ovgLfgka6yL7Rikay8IHxiXRfI0ovg" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p><strong>50 bytes</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and min(i+1+f(n/i)for i in[2,3,4,5])
 </code></pre>
-<p><a href="https://tio.run/##FctBCoMwEAXQtZ5ilhkcKGksiGAvUlxE0uhA/YbgxtPHdPvgpevcDrgh5VLi9PP7EjxhxNt6BNoVRjvbRYOHcjwyKSk@T3HSy2vm8idUouyxfo0V53hsm5QVp4HUx1xu" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FctBCoMwEAXQtZ5ilhkcKGksiGAvUlxE0uhA/YbgxtPHdPvgpevcDrgh5VLi9PP7EjxhxNt6BNoVRjvbRYOHcjwyKSk@T3HSy2vm8idUouyxfo0V53hsm5QVp4HUx1xu" rel="noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Doesn't bother with the formula. Instead, implements the <a href="https://math.stackexchange.com/a/4939642/24654">characterization from the math SE post</a> where each step creates 2, 3, 4, or 5 copies of the strings for that many operations plus one.</p>
 <p>The outputs don't match the formula-derived test cases on powers of 4, but as Bubbler points out, this is due to a typo in the formula in the math SE post.</p>
 </div>
