--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240708T144114Z
+"   /golfscore                                      20240708T144952Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/66053.html">xu ti te gismytermorna? (Is it a valid gismu?)  : 0066053</a>
 <a href="q/190727.html">The fastest Sudoku solver                       : 0190727</a>
 <a href="q/273990.html">Is this a Hadamard matrix?                      : 0273990</a>
 <a href="q/273927.html">Minimum number of select-all/copy/paste steps fo: 0273927</a>
