--- a/q/273990.html
+++ b/q/273990.html
@@ -26,18 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
-<tr d-ix="1"><td>058</td><td>Ruby</td><td>240708T105955Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274010#274010">G B</a></td></tr>
-<tr d-ix="2"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
-<tr d-ix="3"><td>010</td><td>05AB1E</td><td>240708T075629Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274006#274006">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
-<tr d-ix="5"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
-<tr d-ix="6"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
-<tr d-ix="7"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
-<tr d-ix="8"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
-<tr d-ix="9"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="0"><td>019</td><td>APL+WIN</td><td>240708T145932Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274016#274016">Graham</a></td></tr>
+<tr d-ix="1"><td>007</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="2"><td>058</td><td>Ruby</td><td>240708T105955Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274010#274010">G B</a></td></tr>
+<tr d-ix="3"><td>060</td><td>JavaScript ES6</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="4"><td>010</td><td>05AB1E</td><td>240708T075629Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274006#274006">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>105</td><td>Python 3</td><td>240708T074215Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274005#274005">Jitse</a></td></tr>
+<tr d-ix="6"><td>036</td><td>R</td><td>240708T054306Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/274000#274000">pajonk</a></td></tr>
+<tr d-ix="7"><td>004</td><td>Nekomata + e</td><td>240708T035232Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273997#273997">alephalp</a></td></tr>
+<tr d-ix="8"><td>011</td><td>PARI/GP</td><td>240708T023321Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273995#273995">alephalp</a></td></tr>
+<tr d-ix="9"><td>008</td><td>Vyxal</td><td>240707T225405Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273994#273994">emanresu</a></td></tr>
+<tr d-ix="10"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 7 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 19 bytes</h1>
+<p>Prompts for matrix. 1 = true, 0 = false</p>
+<pre><code>(×/⍴m)=+/+/m+.×⍉m←⎕
+</code></pre>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv8bh6fqPerfkatpq62vr52rrHZ7@qLczF6gAqPA/UAnX/zQuEwUToBpDBRg8tB5BQmiECJjFlcZlpGAE1wMU40KYgqYWxRx0cbBRQA5IIxcA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>9</s> 7 bytes</h1>
 <p><em>Thanks to <a href="https://codegolf.stackexchange.com/users/9288/alephalpha">@alephalpha</a> for a correction (the transpose was originally missing)</em>.</p>
 <pre><code>t!Y*XR~
 </code></pre>
@@ -51,13 +58,13 @@ XR    % Set entries on the diagonal and below to 0
 ~     % Negate each entry. Implicit display
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 58 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 58 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;m{m.combination(2).all?{|r,s|s.zip(r).sum{|a,b|a*b}==0}}
 </code></pre>
 <p><a href="https://tio.run/##KypNqvyfZvtf1y63OlcvOT83KTMvsSQzP0/DSFMvMSfHvrqmSKe4plivKrNAo0hTr7g0t7omUSepJlErqdbW1qC29n@BQlp0dLShDhjG6gBZuiCmLoQN5unCxUFSsbGx/wE" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 60 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some(p=&gt;m.some(q=&gt;p!=q&amp;&amp;p.reduce((t,v,x)=&gt;t+v*q[x],0)))
@@ -80,7 +87,7 @@ m.some(p =&gt;         // for each row p[] in m[]:
 )                   // end of outer some()
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>δ*OZ/āDδQQ
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/273995/52210"><em>@alephalpha</em>'s PARI/GP answer</a>, so make sure to upvote that answer as well!</p>
@@ -102,20 +109,20 @@ m.some(p =&gt;         // for each row p[] in m[]:
            # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda a,x=2:x&lt;1or all(sum(map(int.__eq__,i,j))*2==len(i)for i in a for j in{*a}-{i})*f([*zip(*a)],x-1)
 </code></pre>
 <p><a href="https://tio.run/##rZDBCoMwEETvfsUesyEpaG/SfIkESanSSNRUI9iK354mKkLvPSQ8ZodlduzbPfvu6n0tjGrvDwWKzSLL51vaD6CMIePUklZZojt3KcvqVZZMswaRZkKYqiMa6@DUoDtQELEJuFC18kWvSGtS0I@2hCqUbOYpeleNbgQBRVJAkUqQbAMGcD4ZvqjwQ@GnAofKfzy772@r@L5KJvGcGDcet8XOEwhsQ3o3WVNtxWzE4hgxjO0QmiJ16Msi@i8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 36 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(H)any(H%*%t(H)-diag(n&lt;-nrow(H))*n)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY3VWI0PDQT8yo1PFS1VEuAbN2UzMR0jTwb3byi_HIgX1MrTxOq9muaRkFRZl6JRomGoaamJheMW5SUmZeikaxhqGOoqQOidEHS2OR1CSlQgCKQMhBDF8LXhQtAxXRRVIBV4TIR1QhdhBk4LEFRAQQQzy9YAKEB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Uses the characterization: <span class="math-container">\$HH^T=nI_n\$</span>.</p>
 <p>Outputs swapped <code>TRUE</code>/<code>FALSE</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 4 bytes</h1>
 <pre><code>Sđ∙Z
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FsuDj0x81DEzaklxUnIxVGzBzbboaMPYWC4gqWMYqwMkdWFcXRBfFyQMldZBKNGBSkMYMLYuRAquXwfJEIiMDg7xWIhzAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -141,13 +148,13 @@ S       Find a subset of the input
         Nekomata does not allow multiplying two lists of different lengths
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 11 bytes</h1>
 <pre><code>a-&gt;a*a~==#a
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWqxN17RK1EutsbZUTISI3pycWFORUaiQq6NopFBRl5pUAmUogjpJCmkaipqaOQrRvYomGIYhhqGNobaijaxgLZusaWusCRSAcMARL6oBlIBSEpQsRhunSgWsFc6yxiMXGakKct2ABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Let <span class="math-container">\$A\$</span> be the input matrix. Since it is guaranteed to contain only <code>1</code> and <code>-1</code>, we only need to check if <span class="math-container">\$A A^T = n I\$</span>, where <span class="math-container">\$n\$</span> is the number of rows in <span class="math-container">\$A\$</span>. When comparing a matrix with a scalar, PARI/GP will automatically multiply the scalar by the identity matrix of the same size.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 8 bytes</h1>
 <pre><code>2ḋṠ₌@ȧṠ⁼
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIy4biL4bmg4oKMQMin4bmg4oG8IiwiIiwiW1sxICwxLCAxLCAxXSxbMSwgLTEsICAxLCAtMSxdLFsxLCAxLCAtMSwgLTFdLFsxLC0xLC0xLCAxXV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -159,7 +166,7 @@ S       Find a subset of the input
    ₌ ȧṠ  # Sum of absolute values?
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
