--- a/q/274018.html
+++ b/q/274018.html
@@ -26,13 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
+<tr d-ix="0"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="1"><td>083</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 89 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<p>Expects an array of characters. Returns <strong>0</strong> for <em>ping-pong</em> or <strong>1</strong> for <em>not ping-pong</em>.</p>
 
-<pre class="lang-python prettyprint-override"><code>lambda x:x and all((x[i]in'yuiophjklnm')^(x[i+1]in'yuiophjklnm')for i in range(len(x)-1))
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
 </code></pre>
-<p><a href="https://tio.run/##ZchLCoMwEADQq8wuE6QL6aYInqQfGNHomHESokJy@rRd@5YvlmMJen/EVF3/qkLbMBLkLgPpCCSCmJ/8ZjXl5BCX1Ytuxn7@27SXdyEBAysk0nlCmRSzvbXW1phYD3RoPBXyu/nVFw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##hdDBisIwEAbgu08hOSWHRrwbT6t72gqL4KFbYYipnW1sWid1Kfju1S4iFYye5jAf//DPL5yA9BErH5VuZ7pMdaDmMJueQZI7GF4rreZ1dJ2TJI@qpk0nKL0hz7XYctiqqRCi064kZ420bs85S9bHxudtyoQYDTcZT6SUjApTedRIBzYep8/NIv5Ybb4W8fpKQqZuoPTo256EzA6pMvZfBE0BLRT02sBtfTejx8o/ZbIES8HOMAwI3Oi/yt6Yzfcq/mRvcnKkP7Q2A7QsYIZ1@pzuAg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> 83 bytes</h1>
+<p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>lambda x:x and all((x[i]in(r:='yuiophjklnm'))^(x[i+1]in r)for i in range(len(x)-1))
+</code></pre>
+<p><a href="https://tio.run/##FctNCoMwEEDhq8wuM5QupJsieJL@QKpJnRonQ4wQTx@b3YOPp0eeo9zumqofnjXY9TNZKH0BKxPYEBDLg18smPrBHDtHnX9LkNUQvRtduj9CIh8TMLS08nUYnGCha0dUNbFk9Gi2xWnmkbc21xM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
