--- a/q/274018.html
+++ b/q/274018.html
@@ -26,23 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>029</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
-<tr d-ix="1"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="0"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="1"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 <tr d-ix="2"><td>083</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 29 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>$_=!/[h-puy]{2}|[^h-puy]{2}/i
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9X6yvoKelr2/9XyXeVlE/OkO3oLQyttqotiY6Ds7Wz/z/vzg7taAkMzmzOFcBDHQhVElRaSqXq5@Lf7ivq1@IAqZcYWliXklmSaUCFrmUzOKC1BwFBWxy2YmVidnF2OUSFVABilwiVrm0xJziVK6S1OISnJLhQf5@7jh1ZmQWl2fm5KQlZuZgSJ7bqoDb0n/5wHDLzyv@r@trqmdgaPBftyAHAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>Uses the standard QWERTY layout.</p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>ping-pong</em> or <strong>1</strong> for <em>not ping-pong</em>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
 </code></pre>
 <p><a href="https://tio.run/##hdDBisIwEAbgu08hOSWHRrwbT6t72gqL4KFbYYipnW1sWid1Kfju1S4iFYye5jAf//DPL5yA9BErH5VuZ7pMdaDmMJueQZI7GF4rreZ1dJ2TJI@qpk0nKL0hz7XYctiqqRCi064kZ420bs85S9bHxudtyoQYDTcZT6SUjApTedRIBzYep8/NIv5Ybb4W8fpKQqZuoPTo256EzA6pMvZfBE0BLRT02sBtfTejx8o/ZbIES8HOMAwI3Oi/yt6Yzfcq/mRvcnKkP7Q2A7QsYIZ1@pzuAg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<hr />
+<h1>JavaScript (ES6), 39 bytes</h1>
+<p><a href="https://codegolf.stackexchange.com/a/274024/58563">@Xcali</a> used a much more straightforward solution which can be ported as follows:</p>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;/^$|[h-puy]{2}|[^h-puy]{2}/i.test(s)
+</code></pre>
+<p><a href="https://tio.run/##ddBNC4JAEAbge78ilg7rQYPudurjlEEIHUxhsDUnNzVnLST77fZBheF6G3h4mXnnCBegsMBcmWm2F01kN2RPx8Go9mIzLyv/NrnXXvCbx2gpQYqT0YRZSpkUlswOnDPPLUoVVz4zjEFbIs4oEbnCEOnEhsMuz53ZeruaO@5TNXwuIVWoqpdqeI@UC/lGHSdQQUK9DB/58uC/1C71FiBJ2wra2S6/vsT6ebtZO0vWn46RrihlBCg1u9tXP9PNAw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>$_&amp;&amp;=!/[h-puy]{2}|[^h-puy]{2}/i
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9X6yvoKelr2/9XyVeTc1WUT86Q7egtDK22qi2JjoOztbP/P@/ODu1oCQzObM4VwEMdCFUSVFpKheXq5@Lf7ivq1@IAqZkYWliXklmSaUCFrmUzOKC1BwFBWxy2YmVidnF2OUSFVABilwiVrm0xJziVK6S1OISnJLhQf5@7jh1ZmQWl2fm5KQlZuZgSJ7bqoDb0n/5wIDLzyv@r@trqmdgaPBftyAHAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>Assumes QWERTY layout.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> 83 bytes</h1>
 <p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em></p>
