--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240708T201234Z
+"   /golfscore                                      20240708T202905Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/211925.html">Palindrome distance                             : 0211925</a>
 <a href="q/273990.html">Is this a Hadamard matrix?                      : 0273990</a>
 <a href="q/274018.html">Keyboard Ping Pong                              : 0274018</a>
 <a href="q/171018.html">Compare version numbers                         : 0171018</a>
