--- a/q/274018.html
+++ b/q/274018.html
@@ -35,14 +35,33 @@
 <tr d-ix="6"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
 <tr d-ix="7"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 127 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.875 bytes</h1>
-<pre><code>⇩ƛk•5vẇ∑vFT;f¯A?ḃ∧
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
+<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIuKHqcaba+KAojV24bqH4oiRdkZUO2bCr0E/4biD4oinIiwiIiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Bitstring:</p>
-<pre><code>1101001110000111100000111000110100110000111000101110111000010100000111100010110111000111011101101000010010000000110100110000110
+<pre><code>0110100000110010000101110000101100010110000010110110100110101011010101011111000101101010010111000001110111100000010110110
 </code></pre>
-<p>If it wasn't for the empty string requirement, the <code>?ḃ∧</code> at the end wouldn't be needed.</p>
+<p>Outputs a space for true, an empty string for false. The footer in the link converts the result to <code>0</code> or <code>1</code> for convenience.</p>
+<h2>Explained</h2>
+<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏‏​⁡⁠⁡‌⁢​‎‏​⁢⁠⁡‌⁣​‎‏​⁢⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁣⁣​‎‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏‏​⁡⁠⁡‌⁣⁤​‎‏​⁢⁠⁡‌⁤⁡​‎‏​⁢⁠⁡‌⁤⁢​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏‏​⁡⁠⁡‌⁤⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏‏​⁡⁠⁡‌­
+[                  # ‎⁡Only execute the following if the input isn't the empty string.
+# ‎⁢Why else do you think false is represented as the empty string? :p
+# ‎⁣It was easier to special case it
+ ⇩ƛ                # ‎⁤To each character in the lowercased input:
+   k•              # ‎⁢⁡Push a list of each row of qwerty
+     5vẇ           # ‎⁢⁢Split each into [first 5 characters, rest]
+        ∑          # ‎⁢⁣And fold the list by addition. This gives a list of [left keys, right keys]
+         vFT       # ‎⁢⁤Determine whether the character is a left or right key.
+         vF        # ‎⁣⁡  Filter out the key from each side
+             f¯    # ‎⁣⁣Flatten that and get the forward differences
+# ‎⁣⁤This will be used to determine whether there's a pattern of left/right or right/left. 
+# ‎⁤⁡A 0 in this list means that two characters in a row are from the same side. 
+               A   # ‎⁤⁢Check whether all numbers are non-0, as per the above explanation of why. This will return either 0 or 1
+                I  # ‎⁤⁣Push that many spaces. This is to be consistent with the empty string output. 
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∧θ№…01⊕Ｌθ⭆θ№⁺⪫…h¦qωuy↧ι
