--- a/q/171018.html
+++ b/q/171018.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>JavaScript Node.js</td><td>240709T082501Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274039#274039">l4m2</a></td></tr>
+<tr d-ix="0"><td>064</td><td>JavaScript Node.js</td><td>240709T082501Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274039#274039">l4m2</a></td></tr>
 <tr d-ix="1"><td>248</td><td>Go</td><td>240708T155538Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/274021#274021">bigyihsu</a></td></tr>
 <tr d-ix="2"><td>050</td><td>Perl 5 plF\.</td><td>210117T005004Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/217661#217661">Xcali</a></td></tr>
 <tr d-ix="3"><td>011</td><td>Jelly</td><td>210116T215142Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/217658#217658">caird co</a></td></tr>
@@ -54,12 +54,11 @@
 <tr d-ix="25"><td>076</td><td>Python 2</td><td>180822T065251Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/171022#171022">TFeld</a></td></tr>
 <tr d-ix="26"><td>087</td><td>Python 2</td><td>180822T061045Z</td><td><a href="https://codegolf.stackexchange.com/questions/171018/compare-version-numbers/171021#171021">Chas Bro</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 62 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 64 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;(g=i=&gt;(a+b)[i]?a.split`.`[i]-b.split`.`[i]||g(i+1):0)(0)
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;(g=i=&gt;(a+b)[i]?~a.split`.`[i]-~b.split`.`[i]||g(i+1):0)(0)
 </code></pre>
-<p><a href="https://tio.run/##hZDRbsIgGIXv9xTNfwUx/gLBlS7SPciyxNZpg2msWY1XvnsHBdtORQmQnPBxOJx9cS7aza85nuaH5mfb7XRX6LzUOam0sXsxK@mX@f4ssD3W5rTGtVXzcqoul4qYGacfjBJGu01zaJt6i3VTkR0BAUkYlAAfBU0WiyR/u6E5MmQQofUDGkbv8WqMFij7ODSI/oFoEo7L91RlEOip9@oBHaJ4Gl78UkxpvnzurZDJoROFEp51kiLjQ4MpKnjdN7oefYPMTQGRJP6Y2doszfxViHpfjxNP839J7rzltWFHy5u@77yzLEO7oKeDsC9EvAVzHSoHDGLM3f0B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>pog</p>
+<p><a href="https://tio.run/##hZDRbsIgGIXv9xTNfwUx/gLBlS6je5BlidRpg2msWc2ujK/eQaltp6IESE74OBzOzvyaZv1jD8f5vv7etFvdGp0XOieltm43s4J@2q@Ps8HmUNnjCldOzs/FVJ5OJbEzTt8YJYy263rf1NUGq7okWwICkn5QAnwUNFkskvzliubIkEGE1ndoGL3HqzFaoOzi0F50D0STcFy@piqDnp56v9@h@yiBhie/FFOaLx97K2Ry6EShhEedpMj40GCKCp73jb7H0CDzU0AkSThmrjZHs3AVot6X4yTQ/F@SG295adjT8qrvG@8sy9At6OheuBci3oL5DpUHBjHmbv8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 248 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import(.&quot;fmt&quot;;.&quot;strings&quot;)
